--- a/package.json
+++ b/package.json
@@ -4,20 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "serve",
+    "dev": "parcel index.html",
+    "build": "parcel build index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "jiheon788@ajou.ac.kr",
   "license": "ISC",
-  "dependencies": {
-    "serve": "^14.2.0"
-  },
   "devDependencies": {
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "parcel-bundler": "^1.12.5",
     "prettier": "^2.8.4"
-  },
-  "type": "module"
+  }
 }
