--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "serve",
     "dev": "parcel index.html",
     "build": "parcel build index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,5 +18,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "parcel-bundler": "^1.12.5",
     "prettier": "^2.8.4"
+  },
+  "dependencies": {
+    "serve": "^14.2.0"
   }
 }
