--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "parcel-bundler": "^1.12.5",
     "prettier": "^2.8.4"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3"
   }
 }
